--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
+    "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.18",
     "uuidv4": "^6.2.13",
